Another TCL Mac fix

--- a/dependency_support/tk_tcl/bundled.BUILD.bazel
+++ b/dependency_support/tk_tcl/bundled.BUILD.bazel
@@ -60,10 +60,11 @@ TCL_COPTS = [
     "-DHAVE_GETGRGID_R=1",
     "-DHAVE_GETGRNAM_R_5=1",
     "-DHAVE_GETGRNAM_R=1",
-    "-DHAVE_GETHOSTBYNAME_R_6=1",
-    "-DHAVE_GETHOSTBYNAME_R=1",
-    "-DHAVE_GETHOSTBYADDR_R_8=1",
-    "-DHAVE_GETHOSTBYADDR_R=1",
+    # Don't have this on mac. Doesn't seem to matter though.
+    # "-DHAVE_GETHOSTBYNAME_R_6=1",
+    # "-DHAVE_GETHOSTBYNAME_R=1",
+    # "-DHAVE_GETHOSTBYADDR_R_8=1",
+    # "-DHAVE_GETHOSTBYADDR_R=1",
     "-DUSE_TERMIOS=1",
     "-DTIME_WITH_SYS_TIME=1",
     "-DHAVE_TM_ZONE=1",
