--- a/dependency_support/org_sourceware_libffi/bundled.BUILD.bazel
+++ b/dependency_support/org_sourceware_libffi/bundled.BUILD.bazel
@@ -16,7 +16,7 @@ load("@rules_hdl//dependency_support:automake_substitution.bzl", "automake_subst
 load("@rules_hdl//dependency_support:copy.bzl", "copy")
 
 AUTOMAKE_SUBSTITUTIONS = {
-    "TARGET": "X86_64",
+    "TARGET": "AARCH64",
     "HAVE_LONG_DOUBLE": "1",
     "FFI_EXEC_TRAMPOLINE_TABLE": "0",
 }
@@ -55,7 +55,7 @@ DEFINES = [
 
 copy(
     name = "ffitarget_h",
-    src = "src/x86/ffitarget.h",
+    src = "src/aarch64/ffitarget.h",
     out = "generated/include/ffitarget.h",
 )
 
@@ -73,15 +73,10 @@ cc_library(
         "src/prep_cif.c",
         "src/raw_api.c",
         "src/types.c",
-        "src/x86/asmnames.h",
-        "src/x86/ffi.c",
-        "src/x86/ffi64.c",
-        "src/x86/ffiw64.c",
-        "src/x86/internal.h",
-        "src/x86/internal64.h",
-        "src/x86/sysv.S",
-        "src/x86/unix64.S",
-        "src/x86/win64.S",
+        "src/aarch64/ffi.c",
+        "src/aarch64/ffitarget.h",
+        "src/aarch64/internal.h",
+        "src/aarch64/sysv.S",
     ],
     copts = [
         "-Wno-deprecated-declarations",
